# robocup_demo

./: CHANGELOG.md  README.md
scripts/: start.sh  start_brain.sh  start_calibration.sh  start_vision.sh  stop.sh
src/brain/: CMakeLists.txt  package.xml
src/brain/behavior_trees/: assist.xml  chase.xml  game.xml  test.xml  test_kick.xml
src/brain/behavior_trees/subtrees/: subtree_auto_standup_and_locate.xml  subtree_cam_find_and_track_ball.xml  subtree_find_ball.xml  subtree_goal_keeper_play.xml  subtree_striker_freekick.xml  subtree_striker_play.xml
src/brain/config/: brain.yaml  config.yaml
src/brain/include/: brain.h  brain_communication.h  brain_config.h  brain_data.h  brain_log.h  brain_tree.h  locator.h  robot_client.h  team_communication_msg.h  types.h
src/brain/include/utils/: math.h  misc.h  print.h
src/brain/launch/: launch.py
src/brain/msg/: Kick.msg
src/brain/src/: brain.cpp  brain_communication.cpp  brain_config.cpp  brain_log.cpp  brain_tree.cpp  locator.cpp  main.cpp  robot_client.cpp
src/game_controller/include/: game_controller_node.h
src/game_controller/launch/: launch.py
src/game_controller/src/: game_controller_node.cpp
src/interface/booster_msgs/include/: message_utils.h
src/interface/game_controller_interface/: CMakeLists.txt
src/interface/game_controller_interface/msg/: TeamInfo.msg
src/interface/vision_interface/: CMakeLists.txt
src/vision/config/: vision.yaml
src/vision/include/booster_vision/: vision_node.h
src/vision/include/booster_vision/model/trt/: impl.h  logging.h
src/vision/launch/: launch.py
src/vision/src/: img_bridge.cpp  vision_node.cpp
src/vision/src/calibration/: board_detector.cpp  calibration_node.cpp
src/vision/src/model/trt/: CMakeLists.txt  calibrator.cpp  impl.cpp  postprocess.cpp
src/vision/src/pose_estimator/: pose_estimator.cpp
